Modified the footer, and corrected an unexpected scrollbar with the toolbar

--- a/src/app/front-page/front-page.component.css
+++ b/src/app/front-page/front-page.component.css
@@ -101,7 +101,7 @@ article{
 /* ************ END DETAILS PART  ************ */
 
 /* ************ media queries ************ */
-@media screen and (max-width:600px){
+@media screen and (max-width:768px){
   .hero-img{
     display:none;
   }
