--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -12,7 +12,6 @@ header{
 }
 nav ul{
   list-style: none;
-  width:80%;
 }
 .connect{
   font-weight: normal;
